...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/customerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Customer"
...
            android:layout_below="@+id/customerTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Start Transaction"/>

        <Button
            android:id="@+id/viewEditCustomer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/startTransaction"
            android:layout_alignStart="@+id/startTransaction"
            android:layout_below="@+id/startTransaction"
            android:layout_marginTop="30dp"
...
